# django-markwhat

./: .gitignore  .travis.yml  AUTHORS.rst  ChangeLog.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.py  setup.py  tox.ini
.github/workflows/: main.yml  pypi.yml
django_markwhat/: __init__.py  models.py  tests.py
django_markwhat/templatetags/: __init__.py  markup.py
requirements/: dev.txt
